// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Column Base component works correctly 1`] = `
<div
  className="sc-bdfBQB iVGUQd"
>
  Column
</div>
`;

exports[`Grid Column Grids are working 1`] = `
<div
  className="sc-bdfBQB ggzPQY"
>
  6 Grid Column
</div>
`;

exports[`Grid Container Base component works correctly 1`] = `
<div
  className="container-0-2-1"
>
  Container
</div>
`;
